--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gatsby-plugin-sharp": "^3.6.0",
     "gatsby-source-filesystem": "^3.6.0",
     "gatsby-transformer-sharp": "^3.6.0",
-    "google-maps-react": "^2.0.6",
+    "google-map-react": "^2.1.10",
+    "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
