--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "contentful": "^8.4.2",
     "dotenv": "^10.0.0",
     "gatsby": "^3.6.2",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
@@ -20,6 +22,7 @@
     "gatsby-source-filesystem": "^3.6.0",
     "gatsby-transformer-sharp": "^3.6.0",
     "google-map-react": "^2.1.10",
+    "https-proxy-agent": "^5.0.0",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
@@ -32,6 +35,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "contentful-import": "^8.1.20",
     "prettier": "2.2.1"
   },
   "keywords": [
