--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.11.1",
     "react-icons": "^4.2.0",
     "react-slick": "^0.28.1",
+    "react-truncate": "^2.4.0",
     "slick-carousel": "^1.8.1",
     "yup": "^0.32.9"
   },
