--- a/package.json
+++ b/package.json
@@ -39,8 +39,13 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.11.1",
     "react-icons": "^4.2.0",
+    "react-redux": "^7.2.4",
     "react-slick": "^0.28.1",
     "react-truncate": "^2.4.0",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
     "yup": "^0.32.9"
   },
